<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.sam.demo.MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:contentDescription="@string/textLogo"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/noError"
        android:textColor="#d73232"/>

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/white"
        android:drawableStart="@drawable/ic_action_name"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="@string/userText"
        android:inputType="textPersonName"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText_user"
        android:layout_alignStart="@+id/editText_user"
        android:layout_below="@+id/editText_user"
        android:layout_marginTop="34dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/ic_action_pass2"
        android:drawableStart="@drawable/ic_action_pass2"
        android:ems="10"
        android:hint="@string/passText"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/editText_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:background="@color/colorAccent"
        android:text="@string/logText"
        android:textColor="#fff"
        android:textSize="18sp" />


    <Button
        android:id="@+id/button_reg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@color/colorAccent"
        android:text="@string/regText"
        android:textColor="#fff"
        android:textSize="18sp"/>

</RelativeLayout>
